# DInvoke_rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config  config.toml
data/: Cargo.toml
data/src/: lib.rs
dinvoke/: Cargo.toml  build.rs
dinvoke/src/: gateway.asm  lib.rs
dinvoke_rs/: Cargo.toml
dinvoke_rs/.cargo/: config
dinvoke_rs/bindings/: Cargo.toml  build.rs
dinvoke_rs/data/: Cargo.toml
dinvoke_rs/data/src/: lib.rs
dinvoke_rs/dinvoke/: Cargo.toml
dinvoke_rs/dinvoke/src/: lib.rs
dinvoke_rs/dmanager/: Cargo.toml
dinvoke_rs/dmanager/src/: lib.rs
dinvoke_rs/manualmap/: Cargo.toml
dinvoke_rs/manualmap/src/: lib.rs
dinvoke_rs/overload/: Cargo.toml
dinvoke_rs/overload/src/: lib.rs
dinvoke_rs/src/: dinvoke.rs  main.rs
dmanager/: Cargo.toml
dmanager/src/: lib.rs
manualmap/: Cargo.toml
manualmap/src/: lib.rs
overload/: Cargo.toml
overload/src/: lib.rs
src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
