[package]
name = "dinvoke_nostd"
version = "0.1.0"
edition = "2021"

[dependencies]
dinvoke = { path = "dinvoke"}
data = { path = "data" }
utils = { path = "utils" }
manualmap = { path = "manualmap" }

[profile.dev]
debug-assertions = false
panic = "abort"
lto = "thin"
strip = true

[profile.release]
debug-assertions = false
panic = "abort"
lto = "thin"
strip = true
