[package]
name = "data"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
strip = true  

[dependencies]
winapi = "0.3.9"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Wdk_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Graphics",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi"
]