[package]
name = "dinvoke"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
strip = true  

[dependencies]
data = { path = "../data" }
libc = "0.2.101"
litcrypt2 = "0.1.2"
winapi = "0.3.9"
nanorand = {version = "0.7.0", optional = true}

[target.'cfg(target_arch = "x86_64")'.dependencies]
nanorand = {version = "0.7.0"}

[features]
syscall = []

[build-dependencies]
cc = "1.0.83"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Wdk_Foundation",
    "Win32_System_Threading"
]