[package]
name = "dinvoke"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "../data" }
utils = { path = "../utils" }
litcrypt2 = "0.1.3"

[profile.dev]
debug-assertions = false

[profile.release]
debug-assertions = false
panic = "abort"
lto = "thin"
strip = true

[build-dependencies]
cc = "1.0.83"