[package]
name = "dinvoke_rs"
version = "0.1.0"
edition = "2018"

[profile.dev.package.dinvoke_rs]
opt-level = 3
debug = 2

[dependencies]
dinvoke = { path = "dinvoke" }
manualmap = { path = "manualmap" }
bindings = { path = "bindings" }
data = { path = "data" }
overload = { path = "overload" }
dmanager = { path = "dmanager" }