[package]
name = "dinvoke_rs"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
opt-level = 'z'     # Optimize for size.
strip = true  

[dependencies]
dinvoke = { path = "dinvoke" }
manualmap = { path = "manualmap" }
bindings = { path = "bindings" }
data = { path = "data" }
overload = { path = "overload" }
dmanager = { path = "dmanager" }

[build-dependencies]
static_vcruntime = "2.0"