[package]
name = "dmanager"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
opt-level = 'z'     # Optimize for size.
strip = true  

[dependencies]
nanorand = "0.7.0"
manualmap = { path = "../manualmap" }
overload = { path = "../overload" }
data = { path = "../data" }
litcrypt2 = "=0.1.2"
dinvoke = { path = "../dinvoke" }

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation"
]
