[package]
name = "manualmap"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
data = { path = "../data" }
dinvoke = { path = "../dinvoke" }
utils = { path = "../utils" }
litcrypt2 = "0.1.3"

[profile.dev]
debug-assertions = false

[profile.release]
debug-assertions = false
panic = "abort"
lto = "thin"
strip = true
