[package]
name = "overload"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
strip = true  

[dependencies]
dinvoke = { path = "../dinvoke" }
data = { path = "../data" }
manualmap = { path = "../manualmap" }
litcrypt2 = "0.1.0"
winproc = "0.6.4"
rand = "0.8.4"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation"
]
