[package]
name = "overload"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
strip = true  

[dependencies]
dinvoke = { path = "../dinvoke" }
data = { path = "../data" }
manualmap = { path = "../manualmap" }
litcrypt2 = "0.1.2"
winproc = "0.6.4"
nanorand = "0.7.0"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation"
]
