[package]
name = "dinvoke"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
opt-level = 'z'     # Optimize for size.
strip = true  

[dependencies]
bindings = { path = "../bindings" }
data = { path = "../data" }
libc = "0.2.101"
winproc = "0.6.4"
litcrypt = "0.3"
winapi = "*"
rand = "*"