[package]
name = "manualmap"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
opt-level = 'z'     # Optimize for size.
strip = true  

[dependencies]
bindings = { path = "../bindings" }
dinvoke = { path = "../dinvoke" }
data = { path = "../data" }
litcrypt = "0.3"
os_info = { version = "3.0", default-features = false }
winapi = "*"